// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary component 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $20.00
  </p>
</div>
`;

exports[`should render ExpensesSummary component 2`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    $12.34
  </p>
</div>
`;
